--- a/css/custom.css
+++ b/css/custom.css
@@ -116,3 +116,12 @@
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+
+
+
+.maps { 
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
