--- a/css/custom.css
+++ b/css/custom.css
@@ -55,7 +55,7 @@
 
 .card-text {
     font-size:1rem;
-    font-family: 'Courier New', Courier, monospace; 
+    font-family: 'Arial, Helvetica, sans-serif'; 
 
 
 
@@ -160,6 +160,7 @@
     color: white;
     text-align: center;
     padding: 20px 0;
+    font-family: Arial, Helvetica, sans-serif;
 
 
 }
@@ -167,6 +168,26 @@
 
 
 .footer-card {
+    background-color: rgb(135, 162, 235);
+    color: white;
+    padding: 20px 0;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+
+
+.container-mt-4 {
+    margin-top: 1.5rem;
+    font-family: Arial, Helvetica, sans-serif;
+
+}
+
+
+
+
+.card-text-center {
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
     background-color: rgb(135, 162, 235);
     color: white;
 }
