--- a/css/custom.css
+++ b/css/custom.css
@@ -193,3 +193,13 @@
     height: 250px;
     object-fit: cover;
 }
+
+
+
+
+.card h100 {
+    height: 100%;
+    background-color: rgb(135, 162, 235);
+    text-align: center;
+    color: white;
+}
