--- a/css/custom.css
+++ b/css/custom.css
@@ -192,3 +192,20 @@
 
 
 
+.d-flex justify-content-center {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.2rem;
+    font-weight: bold;
+    color: rgb(0, 0, 0);
+    align-items: center;
+    
+
+}
+
+h8 {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: rgb(0, 0, 0);
+    align-content: center;
+}
