--- a/css/custom.css
+++ b/css/custom.css
@@ -110,14 +110,14 @@
   
 }
 
+
 .card-img-top {
-    width: 70%;
-    height: 300px;
+    width: 300px;
+    height: 220px;
     object-fit: cover;
     border-radius: 8px;
-    margin-left: auto;
-    margin-right: auto;
     display: block;
+    margin: 0 auto;
 }
 
 .card-img-bottom {
@@ -326,4 +326,29 @@ h8 {
     padding: 20px;
     margin-top: 50px;
     background-color: rgb(240, 248, 255);
+}
+
+
+
+
+
+#myForm label,
+#myForm input,
+#myForm textarea,
+#myForm button,
+#myForm select {
+    font-family: xanh mono, monospace;
+    font-size: 1rem;
+}
+
+
+
+/*products page accordian*/
+
+.accordion-header {
+  font-family: xanh mono, monospace;
+  weight : bold;
+}
+.accordion-body {
+  font-family: xanh mono, monospace;
 }
